--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "Flip-book",
   "version": "1.0.0",
-  "description": "Make cartoons with JavaScript",
+  "description": "Make cartoons with JavaScript and Canvas",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
